# ScrollDownShooter

./: .gitignore  README.md
Resources/Animations/Arcane_sparkle1/03/: data.txt
Resources/Animations/DmitrySpin/: data.txt
Resources/Animations/EnemyShip1/: data.txt
Resources/Animations/EnemyShip2/: data.txt
Resources/Animations/Explosion1/: data.txt
Resources/Animations/Explosion2/: data.txt
Resources/Animations/Explosion3/: data.txt
Resources/Animations/Explosion4/: data.txt
Resources/Animations/Hit1/: data.txt
Resources/Animations/Swarmer/: data.txt
Resources/Animations/Torp_autoaim/: data.txt
Resources/Animations/playerMoveLeft/: data.txt
Resources/Animations/playerMoveRight/: data.txt
Resources/Animations/playerRotate/: data.txt
src/: AbstractMenu.cpp  AbstractMenu.h  Background.cpp  Background.h  BattleActor.cpp  BattleActor.h  BattleLevel.cpp  BattleLevel.h  CMakeLists.txt  Enemies.cpp  Enemies.h  Level.cpp  Level.h  Level0.cpp  Level0.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuPointer.cpp  MenuPointer.h  Object.cpp  Object.h  Particle.cpp  Particle.h  Player.cpp  Player.h  Projectiles.cpp  Projectiles.h  Shooter.cpp  Shooter.h  StaticInit.h  main.cpp
src/Core/: AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  Core.cpp  Core.h  DataSaver.cpp  DataSaver.h  Font.cpp  Font.h  Input.cpp  Input.h  Logger.cpp  Logger.h  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  Symbol.cpp  Symbol.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  Vector2.cpp  Vector2.h
src/MenuBase/: AbstractMenu.cpp  AbstractMenu.h  AbstractMenuItem.cpp  AbstractMenuItem.h  CMakeLists.txt  GraphicMenu.cpp  GraphicMenu.h  MenuElement.cpp  MenuElement.h  StringMenuItem.cpp  StringMenuItem.h  TextVerticalMenu.cpp  TextVerticalMenu.h
